Change list book

--- a/server/views/book/add.ejs
+++ b/server/views/book/add.ejs
@@ -41,7 +41,7 @@
                 <br>
                 <div class="from-group">
                     <label for="priceTextField">Price</label>
-                    <input type="number" class="form-control"
+                    <input type="text" class="form-control"
                     id="pricedTextField"
                     placeholder="Enter the book's Price"
                     name="price" required>
